--- a/client/src/pages/universityMedia.css
+++ b/client/src/pages/universityMedia.css
@@ -1,6 +1,6 @@
 /* University Media Page */
 .university-media-page {
-  margin-top: 80px;
+  margin-top: 0;
 }
 
 .media-hero {
